fixed overlap between search and index results, added nothing found message to index where no results returned

--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -14,7 +14,7 @@ h3, a, p, button, input, textarea {
   text-decoration: none;
 }
 
-body {
+#content {
   min-height: 600px;
   background: #fafafa;
 }
